# ClientServerAndDll

./: .gitignore  README.md
src/TcpServer/: CMakeLists.txt  tcpserver.cpp  tcpserver.h
src/Vowels/: CMakeLists.txt  Vowels_global.h  vowels.cpp  vowels.h
